--- a/index.html
+++ b/index.html
@@ -69,10 +69,8 @@
       
     </div>
 
-
-
-
     <script src="chrono.js"></script>
+    <script src="DOMMap.js"></script>
     <script src="demineur.js"></script>
 	</body>
 </html>
