--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
             <option value="Difficile" onclick="LengthOfMap(20)">Difficile</option>
           </select>
 				</label>
+        <label for="nbBombes">Nombre de Bombes :</label>
+        <input type="range" name="nbBombe" id="nbBombes" min="10" max="30" step="1" onclick="difficultieNbBombe(this.value)"/>
 				<input type="button" name="reset" value="Rejouer" onClick="chronoReset()" />
 				<span id="chronotime">0:00:00:000</span>
         <form name="chronoForm">
